--- a/.github/workflows/main_chabottest.yml
+++ b/.github/workflows/main_chabottest.yml
@@ -30,7 +30,8 @@ jobs:
           source venv/bin/activate
       
       - name: Install dependencies
-        run: pip install -r OutreachX/helpdesk-assistant/requirements.txt
+        working-directory: OutreachX/helpdesk-assistant
+        run: pip install -r requirements.txt
         
       # Optional: Add step to run tests here (PyTest, Django test suites, etc.)
 
