--- a/.github/workflows/main_chabottest.yml
+++ b/.github/workflows/main_chabottest.yml
@@ -35,7 +35,7 @@ jobs:
         run: cp OutreachX/helpdesk-assistant/requirements.txt ./  # ✅ Copy it to the root directory
 
       - name: Zip artifact for deployment
-        run: zip -r release.zip . -x "venv/*" 
+        run: zip -r release.zip . -x "venv/*"  # ✅ Ensures venv is excluded but `requirements.txt` is included
 
       - name: Upload artifact for deployment jobs
         uses: actions/upload-artifact@v4
@@ -43,7 +43,7 @@ jobs:
           name: python-app
           path: |
             release.zip
-            requirements.txt  # ✅ Ensure it is uploaded
+            requirements.txt  # ✅ Ensures `requirements.txt` is uploaded
 
   deploy:
     runs-on: ubuntu-latest
@@ -51,7 +51,7 @@ jobs:
     environment:
       name: 'Production'
       url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
-    
+
     steps:
       - name: Download artifact from build job
         uses: actions/download-artifact@v4
@@ -61,17 +61,26 @@ jobs:
       - name: Unzip artifact for deployment
         run: unzip release.zip
 
+      # ✅ Step 1: Log in to Azure before deploying
+      - name: Azure Login
+        uses: azure/login@v1
+        with:
+          creds: ${{ secrets.AZURE_CREDENTIALS }}
+
+      # ✅ Step 2: Deploy to Azure Web App
       - name: Deploy to Azure Web App
         uses: azure/webapps-deploy@v3
         id: deploy-to-webapp
         with:
           app-name: 'ChabotTest'
           slot-name: 'Production'
-          publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE }}
+          package: .
 
+      # ✅ Step 3: Verify files in Azure Web App after deployment
       - name: Verify files in Azure Web App
-        run: ls -la /home/site/wwwroot/  # ✅ Debug to check if `requirements.txt` is there
+        run: ls -la /home/site/wwwroot/  # ✅ Debugging step to check if `requirements.txt` is there
 
+      # ✅ Step 4: Install dependencies in Azure Web App
       - name: Install dependencies in Azure Web App
         run: |
           cd /home/site/wwwroot/
