--- a/.github/workflows/main_chabottest.yml
+++ b/.github/workflows/main_chabottest.yml
@@ -1,87 +1,46 @@
-name: Build and deploy Python app to Azure Web App - ChabotTest
+name: CI/CD Pipeline
 
 on:
   push:
     branches:
       - main
-  workflow_dispatch:
+  pull_request:
+    branches:
+      - main
 
 jobs:
   build:
     runs-on: ubuntu-latest
-    permissions:
-      contents: read # Required for actions/checkout
 
     steps:
-      - uses: actions/checkout@v4
+    - name: Checkout code
+      uses: actions/checkout@v2
 
-      - name: Set up Python version
-        uses: actions/setup-python@v5
-        with:
-          python-version: '3.8'
+    # Set up Python environment
+    - name: Set up Python
+      uses: actions/setup-python@v2
+      with:
+        python-version: '3.x'
 
-      - name: Create and start virtual environment
-        run: |
-          python -m venv venv
-          source venv/bin/activate
-      
-      - name: Install dependencies before deployment
-        run: |
-          pip install -r OutreachX/helpdesk-assistant/requirements.txt
-        
-      # Optional: Run tests (PyTest, Django test suites, etc.)
+    # Install Python dependencies from requirements.txt
+    - name: Install dependencies
+      run: |
+        python -m pip install --upgrade pip
+        pip install -r requirements.txt
 
-      - name: Ensure `requirements.txt` is included in the deployment package
-        run: cp OutreachX/helpdesk-assistant/requirements.txt ./  # ✅ Copy it to the root directory
+    # Run tests (Optional step for testing, if you have tests defined)
+    - name: Run tests
+      run: |
+        # If you are using pytest or any other test framework, replace with appropriate command
+        echo "Running tests..."  
+        # pytest commands can go here, e.g., pytest tests/
 
-      - name: Zip artifact for deployment
-        run: zip -r release.zip . -x "venv/*"  # ✅ Ensures venv is excluded but `requirements.txt` is included
-
-      - name: Upload artifact for deployment jobs
-        uses: actions/upload-artifact@v4
-        with:
-          name: python-app
-          path: |
-            release.zip
-            requirements.txt  # ✅ Ensures `requirements.txt` is uploaded
-
-  deploy:
-    runs-on: ubuntu-latest
-    needs: build
-    environment:
-      name: 'Production'
-      url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
-
-    steps:
-      - name: Download artifact from build job
-        uses: actions/download-artifact@v4
-        with:
-          name: python-app
-
-      - name: Unzip artifact for deployment
-        run: unzip release.zip
-
-      # ✅ Step 1: Log in to Azure before deploying
-      - name: Azure Login
-        uses: azure/login@v1
-        with:
-          creds: ${{ secrets.AZURE_CREDENTIALS }}
-
-      # ✅ Step 2: Deploy to Azure Web App
-      - name: Deploy to Azure Web App
-        uses: azure/webapps-deploy@v3
-        id: deploy-to-webapp
-        with:
-          app-name: 'ChabotTest'
-          slot-name: 'Production'
-          package: .
-
-      # ✅ Step 3: Verify files in Azure Web App after deployment
-      - name: Verify files in Azure Web App
-        run: ls -la /home/site/wwwroot/  # ✅ Debugging step to check if `requirements.txt` is there
-
-      # ✅ Step 4: Install dependencies in Azure Web App
-      - name: Install dependencies in Azure Web App
-        run: |
-          cd /home/site/wwwroot/
-          pip install -r requirements.txt
+    # Deploy to Azure (modify this step based on your specific deployment method)
+    - name: Deploy to Azure
+      run: |
+        # For Azure App Service deployment via GitHub Actions
+        # You can use Azure CLI or Git-based deployment, modify as per your setup
+        echo "Deploying to Azure App Service..."
+        # Example deployment command:
+        # az webapp deployment source config --name YOUR_APP_NAME --resource-group YOUR_RESOURCE_GROUP --src-path YOUR_PROJECT_PATH
+        # Add the actual deployment commands based on your setup
