--- a/.github/workflows/main_chabottest.yml
+++ b/.github/workflows/main_chabottest.yml
@@ -22,33 +22,23 @@ jobs:
       with:
         python-version: '3.x'
 
-    # Install Python dependencies from requirements.txt
+    # Install Python dependencies from requirements.txt (Ensure correct path)
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install -r requirements.txt
+        pip install -r requirements.txt  # Adjust this if the file is in a subfolder
 
-    # Azure login (using Service Principal authentication)
-    - name: 'Azure Login'
-      uses: azure/login@v1
-      with:
-        client-id: ${{ secrets.AZURE_CLIENT_ID }}
-        tenant-id: ${{ secrets.AZURE_TENANT_ID }}
-        client-secret: ${{ secrets.AZURE_CLIENT_SECRET }}
-        enable-AzPSSession: false
-        environment: azurecloud
-        allow-no-subscriptions: false
-        audience: api://AzureADTokenExchange
-        auth-type: SERVICE_PRINCIPAL
-
-    # Add additional steps to deploy or run tests as needed
-    - name: Run tests (Optional)
+    # Run tests (Optional step for testing, if you have tests defined)
+    - name: Run tests
       run: |
-        # Add test commands here, e.g., pytest or any other test framework you use
+        # If you are using pytest or any other test framework, replace with appropriate command
         echo "Running tests..."
+        # pytest commands can go here, e.g., pytest tests/
 
-    # Deploy to Azure (example step, modify based on your requirements)
-    - name: Deploy to Azure
-      run: |
-        # Add deployment commands, e.g., az webapp deploy
-        echo "Deploying to Azure..."
+    # Deploy to Azure App Service using the deploy action
+    - name: Deploy to Azure Web App
+      uses: azure/webapps-deploy@v2
+      with:
+        app-name: ${{ secrets.AZURE_APP_NAME }}
+        publish-profile: ${{ secrets.AZURE_PUBLISH_PROFILE }}
+        package: .
