--- a/.github/workflows/main_chabottest.yml
+++ b/.github/workflows/main_chabottest.yml
@@ -1,44 +1,87 @@
-name: CI/CD Pipeline
+name: Build and deploy Python app to Azure Web App - ChabotTest
 
 on:
   push:
     branches:
       - main
-  pull_request:
-    branches:
-      - main
+  workflow_dispatch:
 
 jobs:
   build:
     runs-on: ubuntu-latest
+    permissions:
+      contents: read # Required for actions/checkout
 
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v2
+      - uses: actions/checkout@v4
 
-    # Set up Python environment
-    - name: Set up Python
-      uses: actions/setup-python@v2
-      with:
-        python-version: '3.x'
+      - name: Set up Python version
+        uses: actions/setup-python@v5
+        with:
+          python-version: '3.8'
 
-    # Install Python dependencies from requirements.txt (Ensure correct path)
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install -r requirements.txt  # Adjust this if the file is in a subfolder
+      - name: Create and start virtual environment
+        run: |
+          python -m venv venv
+          source venv/bin/activate
+      
+      - name: Install dependencies before deployment
+        run: |
+          pip install -r OutreachX/helpdesk-assistant/requirements.txt
+        
+      # Optional: Run tests (PyTest, Django test suites, etc.)
 
-    # Run tests (Optional step for testing, if you have tests defined)
-    - name: Run tests
-      run: |
-        # If you are using pytest or any other test framework, replace with appropriate command
-        echo "Running tests..."
-        # pytest commands can go here, e.g., pytest tests/
+      - name: Ensure `requirements.txt` is included in the deployment package
+        run: cp OutreachX/helpdesk-assistant/requirements.txt ./  # ✅ Copy it to the root directory
 
-    # Deploy to Azure App Service using the deploy action
-    - name: Deploy to Azure Web App
-      uses: azure/webapps-deploy@v2
-      with:
-        app-name: ${{ secrets.AZURE_APP_NAME }}
-        publish-profile: ${{ secrets.AZURE_PUBLISH_PROFILE }}
-        package: .
+      - name: Zip artifact for deployment
+        run: zip -r release.zip . -x "venv/*"  # ✅ Ensures venv is excluded but `requirements.txt` is included
+
+      - name: Upload artifact for deployment jobs
+        uses: actions/upload-artifact@v4
+        with:
+          name: python-app
+          path: |
+            release.zip
+            requirements.txt  # ✅ Ensures `requirements.txt` is uploaded
+
+  deploy:
+    runs-on: ubuntu-latest
+    needs: build
+    environment:
+      name: 'Production'
+      url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
+
+    steps:
+      - name: Download artifact from build job
+        uses: actions/download-artifact@v4
+        with:
+          name: python-app
+
+      - name: Unzip artifact for deployment
+        run: unzip release.zip
+
+      # ✅ Step 1: Log in to Azure before deploying
+      - name: Azure Login
+        uses: azure/login@v1
+        with:
+          creds: ${{ secrets.AZURE_CREDENTIALS }}
+
+      # ✅ Step 2: Deploy to Azure Web App
+      - name: Deploy to Azure Web App
+        uses: azure/webapps-deploy@v3
+        id: deploy-to-webapp
+        with:
+          app-name: 'ChabotTest'
+          slot-name: 'Production'
+          package: .
+
+      # ✅ Step 3: Verify files in Azure Web App after deployment
+      - name: Verify files in Azure Web App
+        run: ls -la /home/site/wwwroot/  # ✅ Debugging step to check if `requirements.txt` is there
+
+      # ✅ Step 4: Install dependencies in Azure Web App
+      - name: Install dependencies in Azure Web App
+        run: |
+          cd /home/site/wwwroot/
+          pip install -r requirements.txt
