--- a/.github/workflows/main_chabottest.yml
+++ b/.github/workflows/main_chabottest.yml
@@ -55,10 +55,10 @@ jobs:
       - name: Unzip artifact for deployment
         run: unzip release.zip
 
-      # ✅ Use Azure Web App's Built-in Deployment via ZIP Deploy API (No explicit authentication required)
-      - name: Deploy to Azure Web App
+      # ✅ Directly use the Web App name in the URL to avoid GitHub Secrets
+      - name: Deploy to Azure Web App using ZIP API
         run: |
-          curl -X POST "https://$AZURE_APP_NAME.scm.azurewebsites.net/api/zipdeploy" \
+          curl -X POST "https://ChabotTest.scm.azurewebsites.net/api/zipdeploy" \
                --data-binary @release.zip
 
       # ✅ Ensure files exist in Azure Web App
