--- a/.github/workflows/main_chabottest.yml
+++ b/.github/workflows/main_chabottest.yml
@@ -55,7 +55,7 @@ jobs:
       - name: Unzip artifact for deployment
         run: unzip release.zip
 
-      # ✅ Directly use the Web App name in the URL to avoid GitHub Secrets
+      # ✅ Directly reference the Web App name (ChabotTest) in the curl command
       - name: Deploy to Azure Web App using ZIP API
         run: |
           curl -X POST "https://ChabotTest.scm.azurewebsites.net/api/zipdeploy" \
