--- a/.github/workflows/main_chabottest.yml
+++ b/.github/workflows/main_chabottest.yml
@@ -29,7 +29,7 @@ jobs:
         run: pip install -r OutreachX/helpdesk-assistant/requirements.txt
 
       - name: Ensure requirements.txt is included in the deployment package
-        run: cp OutreachX/helpdesk-assistant/requirements.txt ./  # Copy it to the root directory
+        run: cp OutreachX/helpdesk-assistant/requirements.txt ./  # Copy to the root directory
 
       - name: Zip artifact for deployment
         run: zip -r release.zip . -x "venv/*"
@@ -55,35 +55,23 @@ jobs:
       - name: Unzip artifact for deployment
         run: unzip release.zip
 
-      # ✅ Deploy using the correct Azure Web App SCM URL
-      - name: Deploy to Azure Web App using ZIP Deploy API
-        run: |
-          response=$(curl -w "%{http_code}" -X POST "https://chabottest-h8drbhaugxetbhcw.scm.canadacentral-01.azurewebsites.net/api/zipdeploy" \
-               --data-binary @release.zip -o response.log)
-          if [[ "$response" -ne 200 && "$response" -ne 202 ]]; then
-            echo "Deployment failed. Check response.log for details."
-            cat response.log
-            exit 1
-          fi
+      # ✅ Deploy using Azure Web App GitHub Action (No Explicit Login Required)
+      - name: Deploy to Azure Web App
+        uses: azure/webapps-deploy@v3
+        with:
+          app-name: "chabottest-h8drbhaugxetbhcw"
+          package: release.zip
 
-      # ✅ Check if the directory exists before running ls
+      # ✅ Verify files exist after deployment
       - name: Verify files in Azure Web App
         run: |
-          if [ -d "/home/site/wwwroot/" ]; then
-            ls -la /home/site/wwwroot/
-          else
-            echo "Directory /home/site/wwwroot/ does not exist. Deployment might have failed."
-            exit 1
-          fi
+          echo "Checking /home/site/wwwroot/ directory contents..."
+          ls -la /home/site/wwwroot/
 
-      # ✅ Install dependencies in Azure Web App
+      # ✅ Install dependencies inside the Web App
       - name: Install dependencies in Azure Web App
         run: |
-          if [ -d "/home/site/wwwroot/" ]; then
-            cd /home/site/wwwroot/
-            python -m pip install --upgrade pip
-            python -m pip install -r requirements.txt
-          else
-            echo "Cannot install dependencies: /home/site/wwwroot/ does not exist."
-            exit 1
-          fi
+          echo "Installing dependencies..."
+          cd /home/site/wwwroot/
+          python -m pip install --upgrade pip
+          python -m pip install -r requirements.txt
