--- a/.github/workflows/main_chabottest.yml
+++ b/.github/workflows/main_chabottest.yml
@@ -24,12 +24,12 @@ jobs:
         run: |
           python -m venv venv
           source venv/bin/activate
-
+      
       - name: Install dependencies before deployment
         run: pip install -r OutreachX/helpdesk-assistant/requirements.txt
 
       - name: Ensure requirements.txt is included in the deployment package
-        run: cp OutreachX/helpdesk-assistant/requirements.txt ./  # Copy to root directory
+        run: cp OutreachX/helpdesk-assistant/requirements.txt ./  # Copy it to the root directory
 
       - name: Zip artifact for deployment
         run: zip -r release.zip . -x "venv/*"
@@ -55,25 +55,23 @@ jobs:
       - name: Unzip artifact for deployment
         run: unzip release.zip
 
-      # ✅ Use Azure Web App's Built-in Authentication (No Explicit Credentials)
-      - name: Deploy using Kudu API
+      # ✅ Log in to Azure Container Registry (ACR) with username and password
+      - name: Azure Login to ACR
         run: |
-          echo "Deploying to Azure Web App using Kudu API..."
-          curl -X POST "https://chabottest-h8drbhaugxetbhcw.scm.azurewebsites.net/api/zipdeploy" \
-          --data-binary @release.zip \
-          -H "Content-Type: application/zip" \
-          --fail
+          docker login ${{ secrets.ACR_NAME }}.azurecr.io -u ${{ secrets.ACR_USERNAME }} -p ${{ secrets.ACR_PASSWORD }}
 
-      # ✅ Verify files exist after deployment
+      # ✅ Deploy using Azure CLI and ACR credentials
+      - name: Deploy to Azure Web App using ACR Image
+        run: |
+          az webapp config container set --name ChabotTest --resource-group <your-resource-group> --docker-custom-image-name ${{ secrets.ACR_NAME }}.azurecr.io/your-image:latest --docker-registry-server-url https://${{ secrets.ACR_NAME }}.azurecr.io
+
+      # ✅ Verify deployment
       - name: Verify files in Azure Web App
-        run: |
-          echo "Checking /home/site/wwwroot/ directory contents..."
-          ls -la /home/site/wwwroot/
+        run: ls -la /home/site/wwwroot/
 
-      # ✅ Install dependencies inside the Web App
+      # ✅ Install dependencies inside Azure Web App (if necessary)
       - name: Install dependencies in Azure Web App
         run: |
-          echo "Installing dependencies..."
           cd /home/site/wwwroot/
           python -m pip install --upgrade pip
           python -m pip install -r requirements.txt
