--- a/.github/workflows/main_chabottest.yml
+++ b/.github/workflows/main_chabottest.yml
@@ -1,4 +1,8 @@
-name: Build and Deploy Python App to Azure Web App - ChabotTest
+# Docs for the Azure Web Apps Deploy action: https://github.com/Azure/webapps-deploy
+# More GitHub Actions for Azure: https://github.com/Azure/actions
+# More info on Python, GitHub Actions, and Azure App Service: https://aka.ms/python-webapps-actions
+
+name: Build and deploy Python app to Azure Web App - ChabotTest
 
 on:
   push:
@@ -10,7 +14,7 @@ jobs:
   build:
     runs-on: ubuntu-latest
     permissions:
-      contents: read # Required for actions/checkout
+      contents: read #This is required for actions/checkout
 
     steps:
       - uses: actions/checkout@v4
@@ -25,27 +29,29 @@ jobs:
           python -m venv venv
           source venv/bin/activate
       
-      - name: Install dependencies before deployment
-        run: pip install -r OutreachX/helpdesk-assistant/requirements.txt
-
-      - name: Ensure requirements.txt is included in the deployment package
-        run: cp OutreachX/helpdesk-assistant/requirements.txt ./  # Copy it to the root directory
+      - name: Install dependencies
+        run: pip install -r requirements.txt
+        
+      # Optional: Add step to run tests here (PyTest, Django test suites, etc.)
 
       - name: Zip artifact for deployment
-        run: zip -r release.zip . -x "venv/*"
+        run: zip release.zip ./* -r
 
       - name: Upload artifact for deployment jobs
         uses: actions/upload-artifact@v4
         with:
           name: python-app
-          path: release.zip
+          path: |
+            release.zip
+            !venv/
 
   deploy:
     runs-on: ubuntu-latest
     needs: build
     environment:
       name: 'Production'
-
+      url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
+    
     steps:
       - name: Download artifact from build job
         uses: actions/download-artifact@v4
@@ -55,19 +61,11 @@ jobs:
       - name: Unzip artifact for deployment
         run: unzip release.zip
 
-      # ✅ Secure Azure Container Registry (ACR) Login
-      - name: Azure Login to ACR
-        run: |
-          echo "${{ secrets.ACR_PASSWORD }}" | docker login ${{ secrets.ACR_NAME }}.azurecr.io -u ${{ secrets.ACR_USERNAME }} --password-stdin
-
-      # ✅ Deploy using Azure CLI and ACR credentials
-      - name: Deploy to Azure Web App using ACR Image
-        run: |
-          az webapp config container set --name ChabotTest --resource-group ${{ secrets.AZURE_RESOURCE_GROUP }} --docker-custom-image-name ${{ secrets.ACR_NAME }}.azurecr.io/your-image:latest --docker-registry-server-url https://${{ secrets.ACR_NAME }}.azurecr.io
-
-      # ✅ Install dependencies in Azure Web App (if necessary)
-      - name: Install dependencies in Azure Web App
-        run: |
-          cd /home/site/wwwroot/
-          python -m pip install --upgrade pip
-          python -m pip install -r requirements.txt
+      
+      - name: 'Deploy to Azure Web App'
+        uses: azure/webapps-deploy@v3
+        id: deploy-to-webapp
+        with:
+          app-name: 'ChabotTest'
+          slot-name: 'Production'
+          publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_0B63D5416B5645EA9B503D352FA6BC5F }}
