--- a/.github/workflows/main_chabottest.yml
+++ b/.github/workflows/main_chabottest.yml
@@ -1,8 +1,4 @@
-# Docs for the Azure Web Apps Deploy action: https://github.com/Azure/webapps-deploy
-# More GitHub Actions for Azure: https://github.com/Azure/actions
-# More info on Python, GitHub Actions, and Azure App Service: https://aka.ms/python-webapps-actions
-
-name: Build and deploy Python app to Azure Web App - ChabotTest
+name: Build and Deploy Python App to Azure Web App - ChabotTest
 
 on:
   push:
@@ -14,7 +10,7 @@ jobs:
   build:
     runs-on: ubuntu-latest
     permissions:
-      contents: read #This is required for actions/checkout
+      contents: read # Required for actions/checkout
 
     steps:
       - uses: actions/checkout@v4
@@ -29,29 +25,27 @@ jobs:
           python -m venv venv
           source venv/bin/activate
       
-      - name: Install dependencies
-        run: pip install -r requirements.txt
-        
-      # Optional: Add step to run tests here (PyTest, Django test suites, etc.)
+      - name: Install dependencies before deployment
+        run: pip install -r OutreachX/helpdesk-assistant/requirements.txt
+
+      - name: Ensure requirements.txt is included in the deployment package
+        run: cp OutreachX/helpdesk-assistant/requirements.txt ./  # Copy it to the root directory
 
       - name: Zip artifact for deployment
-        run: zip release.zip ./* -r
+        run: zip -r release.zip . -x "venv/*"
 
       - name: Upload artifact for deployment jobs
         uses: actions/upload-artifact@v4
         with:
           name: python-app
-          path: |
-            release.zip
-            !venv/
+          path: release.zip
 
   deploy:
     runs-on: ubuntu-latest
     needs: build
     environment:
       name: 'Production'
-      url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
-    
+
     steps:
       - name: Download artifact from build job
         uses: actions/download-artifact@v4
@@ -61,11 +55,23 @@ jobs:
       - name: Unzip artifact for deployment
         run: unzip release.zip
 
-      
-      - name: 'Deploy to Azure Web App'
-        uses: azure/webapps-deploy@v3
-        id: deploy-to-webapp
-        with:
-          app-name: 'ChabotTest'
-          slot-name: 'Production'
-          publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_0B63D5416B5645EA9B503D352FA6BC5F }}
+      # ✅ Log in to Azure Container Registry (ACR) with username and password
+      - name: Azure Login to ACR
+        run: |
+          docker login ${{ secrets.ACR_NAME }}.azurecr.io -u ${{ secrets.ACR_USERNAME }} -p ${{ secrets.ACR_PASSWORD }}
+
+      # ✅ Deploy using Azure CLI and ACR credentials
+      - name: Deploy to Azure Web App using ACR Image
+        run: |
+          az webapp config container set --name ChabotTest --resource-group <your-resource-group> --docker-custom-image-name ${{ secrets.ACR_NAME }}.azurecr.io/your-image:latest --docker-registry-server-url https://${{ secrets.ACR_NAME }}.azurecr.io
+
+      # ✅ Verify deployment
+      - name: Verify files in Azure Web App
+        run: ls -la /home/site/wwwroot/
+
+      # ✅ Install dependencies inside Azure Web App (if necessary)
+      - name: Install dependencies in Azure Web App
+        run: |
+          cd /home/site/wwwroot/
+          python -m pip install --upgrade pip
+          python -m pip install -r requirements.txt
