--- a/.github/workflows/main_chabottest.yml
+++ b/.github/workflows/main_chabottest.yml
@@ -6,17 +6,19 @@ on:
       - main
   workflow_dispatch:
 
+permissions:
+  id-token: write
+  contents: read  # Required for actions/checkout
+
 jobs:
   build:
     runs-on: ubuntu-latest
-    permissions:
-      contents: read # Required for actions/checkout
 
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      - name: Set up Python version
+      - name: Set up Python
         uses: actions/setup-python@v5
         with:
           python-version: '3.8'
@@ -26,11 +28,11 @@ jobs:
           python -m venv venv
           source venv/bin/activate
 
-      - name: Install dependencies before deployment
+      - name: Install dependencies
         run: pip install -r OutreachX/helpdesk-assistant/requirements.txt
 
-      - name: Ensure requirements.txt is included in the deployment package
-        run: cp OutreachX/helpdesk-assistant/requirements.txt ./  # Copy it to the root directory
+      - name: Ensure requirements.txt is included
+        run: cp OutreachX/helpdesk-assistant/requirements.txt ./  
 
       - name: Zip artifact for deployment
         run: zip -r release.zip . -x "venv/*"
@@ -53,10 +55,10 @@ jobs:
         with:
           name: python-app
 
-      - name: Unzip artifact for deployment
+      - name: Unzip artifact
         run: unzip release.zip
 
-      # ✅ Azure Login using GitHub Secrets
+      # ✅ Azure Login (Fixed OIDC issue)
       - name: Azure Login
         uses: azure/login@v1
         with:
@@ -64,13 +66,13 @@ jobs:
           tenant-id: ${{ secrets.AZURE_TENANT_ID }}
           subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
 
-      # ✅ Log in to Azure Container Registry (ACR) using secrets
-      - name: Azure Login to ACR
+      # ✅ Log in to Azure Container Registry (ACR)
+      - name: Login to Azure Container Registry
         run: |
           az acr login --name ${{ secrets.ACR_NAME }}
 
-      # ✅ Deploy using Azure CLI and ACR credentials
-      - name: Deploy to Azure Web App using ACR Image
+      # ✅ Deploy to Azure Web App
+      - name: Deploy to Azure Web App
         run: |
           az webapp config container set \
             --name ChabotTest \
@@ -78,18 +80,7 @@ jobs:
             --docker-custom-image-name ${{ secrets.ACR_NAME }}.azurecr.io/your-image:latest \
             --docker-registry-server-url https://${{ secrets.ACR_NAME }}.azurecr.io
 
-      # ✅ Restart Web App to apply changes
+      # ✅ Restart Web App after deployment
       - name: Restart Azure Web App
         run: |
           az webapp restart --name ChabotTest --resource-group testingrg
-
-      # ✅ Verify deployment
-      - name: Verify files in Azure Web App
-        run: ls -la /home/site/wwwroot/
-
-      # ✅ Install dependencies inside Azure Web App (if necessary)
-      - name: Install dependencies in Azure Web App
-        run: |
-          cd /home/site/wwwroot/
-          python -m pip install --upgrade pip
-          python -m pip install -r requirements.txt
