--- a/.github/workflows/main_chabottest.yml
+++ b/.github/workflows/main_chabottest.yml
@@ -30,22 +30,25 @@ jobs:
       - name: Build Docker image
         working-directory: ./OutreachX/helpdesk-assistant
         run: |
-          # Build the Docker image from Dockerfile.chatroom
           docker build -f Dockerfile.chatroom -t ${{ secrets.ACR_NAME }}.azurecr.io/your-image:latest .
+
+      - name: Log in to Azure (via Service Principal)
+        uses: azure/login@v1
+        with:
+          client-id: ${{ secrets.AZURE_CLIENT_ID }}
+          tenant-id: ${{ secrets.AZURE_TENANT_ID }}
+          client-secret: ${{ secrets.AZURE_CLIENT_SECRET }}
 
       - name: Log in to Azure Container Registry (ACR)
         run: |
-          # Log in to ACR using Azure CLI
           az acr login --name ${{ secrets.ACR_NAME }}
 
       - name: Tag Docker image for ACR
         run: |
-          # Tag the built Docker image
           docker tag ${{ secrets.ACR_NAME }}.azurecr.io/your-image:latest ${{ secrets.ACR_NAME }}.azurecr.io/your-image:${{ github.sha }}
 
       - name: Push Docker image to ACR
         run: |
-          # Push the tagged Docker image to ACR
           docker push ${{ secrets.ACR_NAME }}.azurecr.io/your-image:${{ github.sha }}
 
       - name: Zip artifact for deployment
